upgrade to javafx to 19; upgrade jfoenix 9.0.10; update docu; replace com.sun.javafx.PlatformUtil with SystemUtils; bug fixing;